[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
hex-literal = "0.3.4"
net = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.6"
string = "0.3.0"
