[workspace]
members = ["node", "lib", "client"]

#[package]
#name = "blockchain"
#version = "0.1.0"
#edition = "2021"
#
#[[bin]]
#name = "blockchain"
#path = "src/node/main.rs"
#
#[[bin]]
#name = "client"
#path = "src/client/client.rs"
#
#
#[dependencies]
#bincode = "1.3.3"
#hex-literal = "0.3.4"
#net = "0.1.0"
#rand = "0.8.5"
#serde = { version = "1.0", features = ["derive"] }
#sha2 = "0.10.6"
#string = "0.3.0"
#tracing-mutex = "0.2.1"
