[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
lib = {path = "../lib"}
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.17"
env_logger = "0.10.0"
chrono = "0.4.23"
crossbeam-channel = "0.5.6"
gethostname = "0.4.1"
